--- a/OnlineElectronicsStore.DAL/OnlineElectronicsStore.DAL.csproj
+++ b/OnlineElectronicsStore.DAL/OnlineElectronicsStore.DAL.csproj
@@ -7,11 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <ProjectReference Include="..\OnlineElectronicsStore.Domain\OnlineElectronicsStore.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\OnlineElectronicsStore.Domain\OnlineElectronicsStore.Domain.csproj" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
     </ItemGroup>
 
 </Project>
