Створив BaseResponse, для відстеження помилок. Добавив прослойкі між бд і в'юшкой. Реалізував репозіторії і сервери для категорії

--- a/OnlineElectronicsStore/OnlineElectronicsStore.csproj
+++ b/OnlineElectronicsStore/OnlineElectronicsStore.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\OnlineElectronicsStore.DAL\OnlineElectronicsStore.DAL.csproj" />
+      <ProjectReference Include="..\OnlineElectronicsStore.Service\OnlineElectronicsStore.Service.csproj" />
     </ItemGroup>
 
     <ItemGroup>
