--- a/OnlineElectronicsStore/OnlineElectronicsStore.csproj
+++ b/OnlineElectronicsStore/OnlineElectronicsStore.csproj
@@ -31,6 +31,8 @@
       <_ContentIncludedByDefault Remove="Pages\Product\Add.cshtml" />
       <_ContentIncludedByDefault Remove="Pages\Product\Index.cshtml" />
       <_ContentIncludedByDefault Remove="Pages\Product\UploadImage.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Category\GetCategories.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Category\GetCategory.cshtml" />
     </ItemGroup>
 
 </Project>
