--- a/OnlineElectronicsStore.DAL/OnlineElectronicsStore.DAL.csproj
+++ b/OnlineElectronicsStore.DAL/OnlineElectronicsStore.DAL.csproj
@@ -23,4 +23,11 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.4\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
+
+    </ItemGroup>
+
 </Project>
